--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -13,7 +13,7 @@
     min-height: 93vh;
     display: flex;
     align-items: center;
-    background-image:url('./images (1).jfif');
+    background-image:url('../../assests/note.webp');
     background-repeat:no-repeat;
     background-position: center;
     background-size: cover;
