--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,4 +1,4 @@
-body{
+body {
   margin: 0;
   padding: 0;
   font-family: Roboto;
@@ -9,7 +9,7 @@ body{
   overflow: hidden;
 }
 
-.center{
+.center {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -19,24 +19,24 @@ body{
   border-radius: 10px;
 }
 
-.center h1{
+.center h1 {
   text-align: center;
   padding: 0 0 20px 0;
   border-bottom: 1px solid silver;
 }
 
-.center form{
+.center form {
   padding: 0 40px;
   box-sizing: border-box;
 }
 
-form .txt_field{
+form .txt_field {
   position: relative;
   border-bottom: 2px solid #adadad;
   margin: 30px 0;
 }
 
-.txt_field input{
+.txt_field input {
   width: 100%;
   padding: 0 5px;
   height: 40px;
@@ -46,7 +46,7 @@ form .txt_field{
   outline: none;
 }
 
-.txt_field label{
+.txt_field label {
   position: absolute;
   top: 50%;
   left: 5px;
@@ -56,39 +56,39 @@ form .txt_field{
   pointer-events: none;
 }
 
-.txt_field span::before{
-  content: '';
+.txt_field span::before {
+  content: "";
   position: absolute;
   top: 40px;
   left: 0;
   width: 0px;
   height: 2px;
   background: #2691d9;
-  transition: .5s;
+  transition: 0.5s;
 }
 
 .txt_field input:focus ~ label,
-.txt_field input:valid ~ label{
+.txt_field input:valid ~ label {
   top: -5px;
   color: #2691d9;
 }
 
 .txt_field input:focus ~ span::before,
-.txt_field input:Valid ~ span::before{
+.txt_field input:valid ~ span::before {
   width: 100%;
 }
 
-.pass{
+.pass {
   margin: -5px 0 20px 5px;
   color: #a6a6a6;
   cursor: pointer;
 }
 
-.pass:hover{
+.pass:hover {
   text-decoration: underline;
 }
 
-.butSubmit{
+.butSubmit {
   width: 100%;
   height: 50px;
   border: 1px solid;
@@ -96,35 +96,33 @@ form .txt_field{
   font-size: 18px;
   font-weight: 700;
   cursor: pointer;
-
 }
-.butSubmit:hover{
+.butSubmit:hover {
   background: #2691d9;
   color: #e9f4fb;
-  transition: .5s;
+  transition: 0.5s;
 }
 
-.signup_link{
+.signup_link {
   margin: 30px 0;
   text-align: center;
   font-size: 16px;
   color: #666666;
 }
 
-.signup_link a{
+.signup_link a {
   color: #2691d9;
   text-decoration: none;
 }
 
-.signup_link a:hover{
+.signup_link a:hover {
   text-decoration: underline;
 }
 
-.HomeAbout{
+.HomeAbout {
   width: 100vw;
   height: 25vh;
 }
-button[type="submit"]:disabled{
+button[type="submit"]:disabled {
   cursor: not-allowed;
-
 }
