--- a/src/pages/Edit/Edit.css
+++ b/src/pages/Edit/Edit.css
@@ -4,7 +4,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left:40px;
+    /* margin-left:40px; */
+    margin-left:140px;
+    margin-top:20px;
 }
 .editforms{
     width:65rem;
