--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,12 @@ body {
     "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color:#0f171e;
+    /* overflow:hidden */
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    height: 100%
 }
 
 code {
