--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -23,8 +23,7 @@
   justify-content: space-evenly;
 }
 
-
-.landingbutton{
+.landingbutton {
   width: 200px;
   height: 50px;
   border: 1px solid;
@@ -32,12 +31,11 @@
   font-size: 18px;
   font-weight: 700;
   cursor: pointer;
-
 }
-.landingbutton:hover{
+.landingbutton:hover {
   background: #2691d9;
   color: #e9f4fb;
-  transition: .5s;
+  transition: 0.5s;
 }
 
 @media only screen and (min-width: 1200px) {
