--- a/src/pages/MyNotes/MyNotes.css
+++ b/src/pages/MyNotes/MyNotes.css
@@ -1,6 +1,8 @@
 .notes-wrapper{
-   height:80%;
-   width:100%;
+    position: relative;
+    max-height:100vh;
+    max-width:100vw;
+    overflow:auto;
 }
 .notes-list{
     margin:20px 0px;
@@ -30,6 +32,8 @@
 
 .show-list{
     margin:20px 0px;
+    overflow: auto; /* Enable vertical scrollbar when content exceeds container height */
+    padding: 1rem;
 }
 .show-list > h2{
     color:#FFFFFF;
@@ -43,6 +47,7 @@
     display:grid;
     grid-template-columns:repeat(auto-fill , minmax(350px,1fr)) ;
     grid-gap:30px;
+    
     /* display:flex;
     flex-direction: row;
     flex-wrap: wrap;
